--- a/0109/package.json
+++ b/0109/package.json
@@ -6,10 +6,14 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "cookie-parser": "~1.4.4",
+    "cookie-parser": "^1.4.4",
     "debug": "~2.6.9",
-    "express": "~4.16.1",
+    "express": "^4.16.4",
     "fs-extra": "^8.1.0",
-    "morgan": "~1.9.1"
-  }
+    "morgan": "^1.9.1"
+  },
+  "main": "app.js",
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
